@@ -1,34 +1,29 @@
+package View;
+
+import com.sun.net.httpserver.HttpExchange;
+import com.sun.net.httpserver.HttpServer;
+
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.InetSocketAddress;
 import java.nio.charset.StandardCharsets;
-import java.util.Base64;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.List;
 import java.util.Map;
-import java.util.Random;
-import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.Executors;
-import java.util.function.Consumer;
-import java.util.stream.Collectors;
-
-import com.sun.net.httpserver.HttpExchange;
-import com.sun.net.httpserver.HttpServer;
-
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.locks.Condition;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
-import java.util.concurrent.locks.Condition;
+import java.util.function.Consumer;
 
-// To run this code type `jshell -R-ea --enable-preview`
-
-enum SSEType { WRITE, CALL, SCRIPT, LOAD, CLEAR, RELEASE; }
-
-class LiveView {
+public class LiveView {
     final HttpServer server;
     final int port;
     static int defaultPort = 50_001;
@@ -41,7 +36,7 @@ class LiveView {
 
     List<HttpExchange> sseClientConnections;
 
-    // lock required to temporarily block processing of `SSEType.LOAD`
+    // lock required to temporarily block processing of `View.SSEType.LOAD`
     Lock lock = new ReentrantLock();
     Condition loadEventOccurredCondition = lock.newCondition();
     boolean loadEventOccured = false;
@@ -69,7 +64,7 @@ class LiveView {
         server = HttpServer.create(new InetSocketAddress("localhost", port), 0);
         System.out.println("Open http://localhost:" + port + " in your browser");
 
-        // loaded-Request to signal successful processing of SSEType.LOAD
+        // loaded-Request to signal successful processing of View.SSEType.LOAD
         server.createContext("/loaded", exchange -> {
             if (!exchange.getRequestMethod().equalsIgnoreCase("post")) {
                 exchange.sendResponseHeaders(405, -1); // Method Not Allowed
@@ -152,11 +147,11 @@ class LiveView {
         sseClientConnections.removeAll(deadConnections);
     }
 
-    void createResponseContext(String path, Consumer<String> delegate) {
+    public void createResponseContext(String path, Consumer<String> delegate) {
         createResponseContext(path, delegate, "-1");
     }
 
-    void createResponseContext(String path, Consumer<String> delegate, String id) {
+    public void createResponseContext(String path, Consumer<String> delegate, String id) {
         server.createContext(path, exchange -> {
             if (!exchange.getRequestMethod().equalsIgnoreCase("post")) {
                 exchange.sendResponseHeaders(405, -1); // Method Not Allowed
@@ -195,41 +190,3 @@ class LiveView {
         views.forEach((k, v) -> v.stop());
     }
 }
-
-interface Clerk {
-    static String generateID(int n) { // random alphanumeric string of size n
-        return new Random().ints(n, 0, 36).
-                            mapToObj(i -> Integer.toString(i, 36)).
-                            collect(Collectors.joining());
-    }
-
-    static String getHashID(Object o) { return Integer.toHexString(o.hashCode()); }
-
-    static LiveView view(int port) { return LiveView.onPort(port); }
-    static LiveView view() { return view(LiveView.getDefaultPort()); }
-
-    static void write(LiveView view, String html)        { view.sendServerEvent(SSEType.WRITE, html); }
-    static void call(LiveView view, String javascript)   { view.sendServerEvent(SSEType.CALL, javascript); }
-    static void script(LiveView view, String javascript) { view.sendServerEvent(SSEType.SCRIPT, javascript); }
-    static void load(LiveView view, String path) {
-        if (!view.paths.contains(path.trim())) view.sendServerEvent(SSEType.LOAD, path);
-    }
-    static void load(LiveView view, String onlinePath, String offlinePath) {
-        load(view, onlinePath + ", " + offlinePath);
-    }
-    static void clear(LiveView view) { view.sendServerEvent(SSEType.CLEAR, ""); }
-    static void clear() { clear(view()); };
-
-    static void markdown(String text) { new MarkdownIt(view()).write(text); }
-}
-
-/open skills/Text/Text.java
-/open skills/ObjectInspector/ObjectInspector.java
-/open views/Turtle/Turtle.java
-/open views/Markdown/Marked.java
-/open views/Markdown/MarkdownIt.java
-/open views/TicTacToe/TicTacToe.java
-/open views/Dot/Dot.java
-/open views/Input/Slider.java
-
- LiveView view = Clerk.view();
